crates/aranya-policy-compiler/tests/data/actions/wrong_arg_type_bad_argument.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: bad argument
  |
3 |     action bar(false)
  |     ^^^^^^^^^^^^^^^^^ invalid argument type for `n`: expected `int`, but got `bool`
